# bigscreen

./: .gitignore  CMakeLists.txt  README.md  library.qrc
flirc-configs/: rokutv_flirc_config
src/: application.cpp  application.h  constants.h  main.cpp  mainWidget.cpp  mainWidget.h  muteDisplay.cpp  muteDisplay.h  muteIcon.cpp  muteIcon.h  trayWindow.cpp  trayWindow.h  volume.h  volumeDisplay.cpp  volumeDisplay.h  volumeIcon.cpp  volumeIcon.h  volumeIndicator.h  volumeText.cpp  volumeText.h
